k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hl-be-Service
  namespace: default
  labels:
    app: hl-be
    version: 11
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hl-be
    version: 11
